# FlexMDM

./: .gitignore  .pre-commit-config.yaml  README.md  bregman.py  evaluate_samples.py  evaluation.py  generate_samples.py  interpolant.py  interpolant_test.py  length_analysis.py  main.py  parenthesis.py  pyproject.toml  sampler_jay.py  sampler_test.py  sampling.py  schedule.py  sft_train.py  sft_trainer.py  test.py  train.py  train_MDM.py  train_any_order.py  train_ar.py  train_autoregressive.py  train_semi_auto.py  train_vanilla_mdm.py
config/: any_order.yaml  semi_auto.yaml
config/bracket/: any_order.yaml  semi_auto.yaml
config/openwebtext/: any_order_small.yaml
config/wikitext2/: any_order.yaml  autoregressive.yaml  vanilla_MDM.yaml
d1/SFT/: ckpt_humaneval.py  datamix.sh  eval.py  eval_gsm8k.sh  gen.sh  gen_humaneval.sh  generate.py  generate_ours.py  gsm_metrics.py  human_eval.py  human_eval_samples_mdm.jsonl  human_eval_samples_mdm.jsonl_results.jsonl  openwebtext_length.py  openwebtext_sft.py  run_sft_robust.py  sft_code.sh  (+10 more)
data/: __init__.py  parenthesis.py  text.py
lightning_modules/: any_order.py  autoregressive.py  mdm.py
model/: MDM_transformer.py  causal_dit.py  mdm_dit.py  transformer.py
notebook/: sample_anyorder_bracket.ipynb  sample_bracket.ipynb  sample_semiauto_bracket.ipynb  test_interpolant.ipynb  test_text.ipynb
scripts/: bracket.sbatch  evaluate_samples_only.sh  generate_samples.sh  mdm.sh  prepare_data.py  prepare_dataset.sh  vlmdm_linear.sh  wikitext2.sbatch  wikitext2_any_order.sbatch  wikitext2_auto.sbatch  wikitext2_mdm.sbatch
(+28 files in other folders)
